@@ -1,0 +1,4 @@
+test_base <- function() {
+    checkTrue(TRUE)
+}
+
